feat(lobby-service): implemented jwt bearer token